# fabric-best-practices-scanner

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: architecture.md  deployment.md
notebooks/: 00-setup.md  00_deploy.ipynb  00_deploy.py  01_run_scanner.py
powerbi/: FabricGovernance.pbip  README.md
powerbi/FabricGovernance.Report/: .platform  definition.pbir  report.json
powerbi/FabricGovernance.SemanticModel/: .platform
powerbi/FabricGovernance.SemanticModel/definition/: expressions.tmdl  model.tmdl
powerbi/FabricGovernance.SemanticModel/definition/tables/: governance_findings.tmdl  governance_inventory.tmdl
src/fabric_bps/: __init__.py  ai.py  archetype.py  checks.py  engine.py  inventory.py  models.py  run.py  signals.py
src/fabric_bps/catalog/: __init__.py  capacity-cost.yaml  content-governance.yaml  data-security.yaml  domains-data-mesh.yaml  monitoring-deployment.yaml  roles-access.yaml  schema.py  tenant-settings.yaml  workspace-governance.yaml
src/fabric_bps/collectors/: __init__.py  base.py  capacities.py  domains.py  pipelines.py  scanner.py  tenant_settings.py  workspaces.py
src/fabric_bps/report/: __init__.py  deploy.py  model_spec.py  provision.py  report_layout.py
src/fabric_bps/writers/: __init__.py  json_writer.py  lakehouse_writer.py
tests/: sample_signals.json  sample_signals_full.json  test_engine.py  test_inventory.py  test_report_layout.py  test_report_spec.py  test_scanner.py  test_writer.py
