[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fabric-best-practices-scanner"
version = "0.1.0"
description = "Evaluate a Microsoft Fabric tenant against a contextual best-practices catalog and produce prioritized, evidence-backed governance findings tailored to your environment (near-zero manual input)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Diego Diaz" }]
keywords = ["microsoft-fabric", "governance", "best-practices", "jumpstart", "power-bi"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: System Administrators",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: System :: Systems Administration",
  "Topic :: Utilities",
]
dependencies = [
  "pyyaml>=6.0",
  "requests>=2.28",
]

[project.urls]
Homepage = "https://github.com/Diaz506/fabric-best-practices-scanner"
Repository = "https://github.com/Diaz506/fabric-best-practices-scanner"
Issues = "https://github.com/Diaz506/fabric-best-practices-scanner/issues"
Changelog = "https://github.com/Diaz506/fabric-best-practices-scanner/blob/main/CHANGELOG.md"

[project.optional-dependencies]
sp = ["msal>=1.24"]              # service-principal auth (headless)
ai = ["openai>=1.0"]            # optional Azure OpenAI rationale enrichment
fabric = ["pandas>=1.5"]       # local parquet fallback for the findings table
deploy = ["semantic-link-labs>=0.8"]  # auto-deploy the semantic model into Fabric (not preinstalled; install via this extra)
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
fabric_bps = ["catalog/*.yaml"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
